routing fixed and tect aligned center within panels

--- a/src/App.css
+++ b/src/App.css
@@ -575,6 +575,7 @@ nav.navbar .navbar-toggler[aria-expanded="true"] .navbar-toggler-icon {
 .panel_text{
   margin-left: 20%;
   font-size: 16px;
+  margin-right: 20%;
   text-align: left;
   font-weight: 100;
   color: #ffffff;
